build: build setup config/files

--- a/browser/index.html
+++ b/browser/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>IGDM Desktop</title>
+    <title>Desktop IG:dm</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
