refactor: change dropdown label

--- a/browser/index.html
+++ b/browser/index.html
@@ -9,7 +9,10 @@
     <div class="container">
       <button class="settings" no-js on-mouseenter-add-class=".dropdown active"></button>
       <div class="dropdown" no-js on-mouseleave-remove-class=".dropdown active">
-        <div class="item" id="seen-flagger">DISABLE "SEEN" FLAGS</div>
+        <div class="item" id="seen-flagger"
+          title="you would know when recipients read your message, but they won't know when your read theirs.'">
+          DONT SEND "SEEN" RECEIPTS
+        </div>
         <div class="item" id="unfollowers">NOT FOLLOWING ME BACK</div>
         <div class="item" id="logout">LOGOUT</div>
       </div>
