refactor: relable dropdown again

--- a/browser/index.html
+++ b/browser/index.html
@@ -13,7 +13,7 @@
           title="you would know when recipients read your message, but they won't know when your read theirs.'">
           DONT SEND "SEEN" RECEIPTS
         </div>
-        <div class="item" id="unfollowers">NOT FOLLOWING ME BACK</div>
+        <div class="item" id="unfollowers">USERS NOT FOLLOWING BACK</div>
         <div class="item" id="logout">LOGOUT</div>
       </div>
 
