chore: remove debug code. reset version

--- a/browser/autoupdate.html
+++ b/browser/autoupdate.html
@@ -7,7 +7,9 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="center">
+    <div class="center container">
+      <br>
+      <br>
       <div id="percentage"></div>
       <div id="message">Downloading ...</div>
     </div>
