chores: elaborate auto-update messages

--- a/browser/autoupdate.html
+++ b/browser/autoupdate.html
@@ -11,7 +11,7 @@
       <br>
       <br>
       <div id="percentage"></div>
-      <div id="message">Downloading <span id="visual">....</span></div>
+      <div id="message">Downloading application update<span id="visual">....</span></div>
     </div>
 
     <script type="text/javascript">
