Add error message on login failure

--- a/browser/login.html
+++ b/browser/login.html
@@ -10,6 +10,7 @@
     <div>
       <img src="img/icon.png" width="100px">
       <h2 class="heading">IG:dm for Desktop</h2>
+      <span id="error" class="errorMessage"></span>
     </div>
     <input type="text" name="username" placeholder="INSTAGRAM USERNAME">
     <input type="password" name="password" placeholder="INSTAGRAM PASSWORD">
