feature: allow newline on chat message input #21

--- a/browser/index.html
+++ b/browser/index.html
@@ -34,7 +34,7 @@
 
         <div class="new-message">
           <form>
-            <input placeholder="type message here">
+            <textarea placeholder="type message here"></textarea>
           </form>
         </div>
         <button class="open-emoji" no-js on-click-toggle-class=".emojis hide">
