feature: view shared IG posts within the app #27

--- a/browser/index.html
+++ b/browser/index.html
@@ -58,6 +58,7 @@
   <script type="text/javascript" src="../node_modules/nojs/dist/no.min.js"></script>
   <script type="text/javascript" src="js/globals.js"></script>
   <script type="text/javascript" src="js/emoji.js"></script>
+  <script type="text/javascript" src="js/carousel.js"></script>
   <script type="text/javascript" src="js/funcs.js"></script>
   <script type="text/javascript" src="js/renderers.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
