feature: upload attachment #3

--- a/browser/index.html
+++ b/browser/index.html
@@ -37,6 +37,10 @@
             <textarea placeholder="type message here"></textarea>
           </form>
         </div>
+        <button class="send-attachment">
+          <img src="img/attachment.png" width="20px">
+        </button>
+        <input type="file" accept="image/jpeg,image/jpg" class="file-input hide">
         <button class="open-emoji" no-js on-click-toggle-class=".emojis hide">
           <img src="img/smiley.png" width="20px">
         </button>
