--- a/browser/autoupdate.html
+++ b/browser/autoupdate.html
@@ -4,7 +4,7 @@
     <title>IG:dm Autoupdate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
   </head>
   <body>
     <div class="center container">
