--- a/browser/twofactor.html
+++ b/browser/twofactor.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container cardBox pb-5 pt-3 pt-sm-5">
       <form class="pageCard mx-auto p-4 p-sm-5">
-        <div class="clearfix welcomeBox"><span class="d-block text-center">Please enter the verification code sent to your e-mail address or phone no.</span></div>
+        <div class="clearfix welcomeBox"><span class="d-block text-center">Please enter the verification code sent to your phone no.</span></div>
         <div class="input-group loginInputs mt-4">
           <input class="form-control code" type="text" name="code" required="true" placeholder="Code">
         </div>
