--- a/browser/autoupdate.html
+++ b/browser/autoupdate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>dm Autoupdate</title>
+    <title>IGdm Autoupdate</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/app.css" rel="stylesheet">
